add some style to img

--- a/recipes/White Russian Cocktail.html
+++ b/recipes/White Russian Cocktail.html
@@ -11,6 +11,7 @@
     <img
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2020%2F07%2F21%2F877046.jpg"
       alt="An easy-to-make classic featuring tasty hamburger 'steaks' smothered in gravy and onions"
+      style="width: 200px; height: 200px"
     />
     <div>
       <div class="description"><strong>description</strong></div>
