--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,6 +11,7 @@
     <img
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7250725.jpg&q=60"
       alt="a small dish with some lasagna portion"
+      style="width: 200px; height: 200px"
     />
     <div>
       <div class="description"><strong>description</strong></div>
