--- a/recipes/Hamburger.html
+++ b/recipes/Hamburger.html
@@ -11,6 +11,7 @@
     <img
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F05%2F15%2F8011693-hamburger-steak-with-onions-and-gravy-GraceErum-1x1-1.jpg"
       alt="An easy-to-make classic featuring tasty hamburger 'steaks' smothered in gravy and onions"
+      style="width: 200px; height: 200px"
     />
     <div>
       <div class="description"><strong>description</strong></div>
