add link to home

--- a/recipes/Hamburger.html
+++ b/recipes/Hamburger.html
@@ -6,67 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>Hamburger Steak with Onions and Gravy</h1>
-    <img
-      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F05%2F15%2F8011693-hamburger-steak-with-onions-and-gravy-GraceErum-1x1-1.jpg"
-      alt="An easy-to-make classic featuring tasty hamburger 'steaks' smothered in gravy and onions"
-      style="width: 200px; height: 200px"
-    />
-    <div>
-      <div class="description"><strong>description</strong></div>
-      <p>
-        An easy-to-make classic featuring tasty hamburger 'steaks' smothered in
-        gravy and onions. Traditionally served with hot white rice or potatoes,
-        it's a great way to dress up a pound of ground beef and you probably
-        have all the ingredients on hand!
-      </p>
-      <p>
-        Per Serving: 319 calories; protein 23.1g; carbohydrates 13.5g; fat
-        18.5g; cholesterol 115.3mg; sodium 597.2mg. Full Nutrition
-      </p>
-    </div>
-    <div>
-      <div class="Ingredients">Ingredients</div>
-      <ul>
-        <li>1 pound ground beef</li>
-        <li>1 egg</li>
-        <li>¼ cup bread crumbs</li>
-        <li>⅛ teaspoon ground black pepper</li>
-        <li>½ teaspoon seasoned salt</li>
-        <li>½ teaspoon onion powder</li>
-        <li>½ teaspoon garlic powder</li>
-        <li>1 teaspoon Worcestershire sauce</li>
-        <li>1 tablespoon vegetable oil</li>
-        <li>1 cup thinly sliced onion</li>
-        <li>2 tablespoons all-purpose flour</li>
-        <li>1 cup beef broth</li>
-        <li>1 tablespoon cooking sherry</li>
-        <li>½ teaspoon seasoned salt</li>
-      </ul>
-    </div>
-    <div>
-      <div class="Steps">Steps</div>
-      <ol>
-        <li>
-          In a large bowl, mix together the ground beef, egg, bread crumbs,
-          pepper, salt, onion powder, garlic powder, and Worcestershire sauce.
-          Form into 8 balls, and flatten into patties.
-        </li>
-        <li>
-          Heat the oil in a large skillet over medium heat. Fry the patties and
-          onion in the oil until patties are nicely browned, about 4 minutes per
-          side. Remove the beef patties to a plate, and keep warm.
-        </li>
-        <li>
-          Sprinkle flour over the onions and drippings in the skillet. Stir in
-          flour with a fork, scraping bits of beef off of the bottom as you
-          stir. Gradually mix in the beef broth and sherry. Season with seasoned
-          salt. Simmer and stir over medium-low heat for about 5 minutes, until
-          the gravy thickens. Turn heat to low, return patties to the gravy,
-          cover, and simmer for another 15 minutes.
-        </li>
-      </ol>
-    </div>
-  </body>
+  <>
+  <h1>Hamburger Steak with Onions and Gravy</h1>
+  <img
+    src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F05%2F15%2F8011693-hamburger-steak-with-onions-and-gravy-GraceErum-1x1-1.jpg"
+    alt="An easy-to-make classic featuring tasty hamburger 'steaks' smothered in gravy and onions"
+    style="width: 200px; height: 200px"
+  />
+  <div>
+    <div class="description"><strong>description</strong></div>
+    <p>
+      An easy-to-make classic featuring tasty hamburger 'steaks' smothered in
+      gravy and onions. Traditionally served with hot white rice or potatoes,
+      it's a great way to dress up a pound of ground beef and you probably have
+      all the ingredients on hand!
+    </p>
+    <p>
+      Per Serving: 319 calories; protein 23.1g; carbohydrates 13.5g; fat 18.5g;
+      cholesterol 115.3mg; sodium 597.2mg. Full Nutrition
+    </p>
+  </div>
+  <div>
+    <div class="Ingredients">Ingredients</div>
+    <ul>
+      <li>1 pound ground beef</li>
+      <li>1 egg</li>
+      <li>¼ cup bread crumbs</li>
+      <li>⅛ teaspoon ground black pepper</li>
+      <li>½ teaspoon seasoned salt</li>
+      <li>½ teaspoon onion powder</li>
+      <li>½ teaspoon garlic powder</li>
+      <li>1 teaspoon Worcestershire sauce</li>
+      <li>1 tablespoon vegetable oil</li>
+      <li>1 cup thinly sliced onion</li>
+      <li>2 tablespoons all-purpose flour</li>
+      <li>1 cup beef broth</li>
+      <li>1 tablespoon cooking sherry</li>
+      <li>½ teaspoon seasoned salt</li>
+    </ul>
+  </div>
+  <div>
+    <div class="Steps">Steps</div>
+    <ol>
+      <li>
+        In a large bowl, mix together the ground beef, egg, bread crumbs,
+        pepper, salt, onion powder, garlic powder, and Worcestershire sauce.
+        Form into 8 balls, and flatten into patties.
+      </li>
+      <li>
+        Heat the oil in a large skillet over medium heat. Fry the patties and
+        onion in the oil until patties are nicely browned, about 4 minutes per
+        side. Remove the beef patties to a plate, and keep warm.
+      </li>
+      <li>
+        Sprinkle flour over the onions and drippings in the skillet. Stir in
+        flour with a fork, scraping bits of beef off of the bottom as you stir.
+        Gradually mix in the beef broth and sherry. Season with seasoned salt.
+        Simmer and stir over medium-low heat for about 5 minutes, until the
+        gravy thickens. Turn heat to low, return patties to the gravy, cover,
+        and simmer for another 15 minutes.
+      </li>
+    </ol>
+  </div>
+  <a href="/index.html">Home</a>
 </html>
